# astera-demogorgn

./: .pre-commit-config.yaml  404.html  README.md  explore.ipynb  index.html  main.py  mkdocs.yml  pyproject.toml  visualize.ipynb
.github/workflows/: basin-update.yml  deploy-docs.yml  initial-ingest.yml
data-upload/: index.html
docs/: data-upload.md  index.md  pipeline.md
docs/stylesheets/: extra.css
pipeline/: index.html
scripts/: basin_update.py  export_realizations.py  ingest.py  initial_ingest.py
search/: search_index.json
updates/: example-basin.yaml
